name:                haskpie
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/themattchan/haskpie#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Chan
maintainer:          matt@parametri.city
copyright:           2017 Matthew Chan
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskpie.Parser
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
		     , mtl
		     , containers
		     , lens
  default-language:    Haskell2010
  default-extensions:  TupleSections
                     , PatternGuards
                     , GADTs
 
executable haskpic
  hs-source-dirs:      haskpie-compiler
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskpie
  default-language:    Haskell2010

executable haskpie
  hs-source-dirs:      haskpie-interpreter
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskpie
  default-language:    Haskell2010

test-suite haskpie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskpie
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/themattchan/haskpie
